tests/fixtures/valid/layout/wrapped_binary.pine
//@version=6
indicator("Wrapped binary")
x = open + high +
  low + close
plot(x)
