tests/fixtures/invalid/semantic/bool_cannot_be_na.pine
//@version=6
indicator("x")
bool b = na
